syntax = "proto3";

package telemetry;

import "google/protobuf/timestamp.proto";

// ─────── EVENTS INGESTION ──────────────────────────────────────
service EventService {
  rpc Push (Event) returns (EventPushResponse);
}

message Event {
  string user_id = 1;
  string event_type = 2;
  google.protobuf.Timestamp happened_at = 3;
  map<string, string> metadata = 4;
}

message EventPushResponse {
  bool success = 1;
  string message = 2;
}

// ─────── EVENTS QUERYING ──────────────────────────────────────
service EventQuery {
  rpc GetHourlyStats (HourlyStatsRequest) returns (HourlyStatsResponse);
  rpc GetTopUsers    (TopUsersRequest) returns (TopUsersResponse);
}

message HourlyStatsRequest {
  string event_type = 1;
}

message HourlyStatsResponse {
  string hour = 1;
  uint32 count = 2;
}


message TopUsersRequest {
  string event_type = 1;
  uint32 limit = 2;
}

message TopUsersResponse {
  string user_id = 1;
  uint32 event_count = 2;
}
